--- a/ws/football/src/main/resources/templates/ergebnisse.html
+++ b/ws/football/src/main/resources/templates/ergebnisse.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ergebnisse</title>
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="ergebnisse.css">
+    <link rel="stylesheet" href="css/ergebnisse.css">
 </head>
 <body>
     <header class="header">
@@ -18,7 +18,8 @@
         </label>    
         <nav class="navbar">
             <a href="index.html">Startseite</a>
-            <a href="stadien.html">Euro 2024</a>
+            <a href="stadien.html">DFB-Kader</a>
+            <a href="stadien.html">Stadien</a>
             <a href="ergebnisse.html" style="color: #C1A875">Ergebnisse</a>
             <a href="forum.html">Forum</a>
             <a href="login.html">Login</a>
@@ -33,7 +34,7 @@
                     <div class="matchcontainer">
                         <div class="match">
                             <div class="group">
-                                <p>Gruppe A (Platzhalter)</p>
+                                <p>Gruppe A</p>
                             </div>
                             <div class="infos">
                                 <div class="infos-left">
@@ -50,7 +51,7 @@
                                 </div>
                                     <div class="team2">
                                         <div class="flag">
-                                            <img src="assets/flagge-deutschland.png">
+                                            <img src="assets/flagge-schottland.png">
                                         </div>
                                         <div class="team">
                                             <p>Schottland</p>
