--- a/ws/football/src/main/resources/templates/index.html
+++ b/ws/football/src/main/resources/templates/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Die Mannschaft - Startseite</title>
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header class="header">
-        <a href="#"><img src="/assets/Logo.png" class="logo"></a>
+        <a href="index.html"><img src="assets/Logo.png" class="logo"></a>
         <input type="checkbox" id="check">
         <label for="check" class="menu">
             <i class="bx bx-menu" id="icon-menu"></i>
             <i class="bx bx-x" id="close-menu"></i>
         </label>    
         <nav class="navbar">
-            <a href="index.html" style="color: #C1A875;">Startseite</a>
-            <a href="stadien.html">Euro 2024</a>
+            <a href="index.html"  style="color: #C1A875">Startseite</a>
+            <a href="kader.html">DFB-Kader</a>
+            <a href="stadien.html">Stadien</a>
             <a href="ergebnisse.html">Ergebnisse</a>
             <a href="forum.html">Forum</a>
             <a href="login.html">Login</a>
@@ -36,7 +37,7 @@
         </section>
         <div class="mannschaft">
             <div>DIE&nbsp;</div>
-            <img src="/assets/Logo_gold.png" class="logo2">
+            <img src="assets/Logo_gold.png" class="logo2">
             <div>&nbsp;MANNSCHAFT</div>
         </div>
         <div class="fotowand">
@@ -44,26 +45,149 @@
             <div class="linie-links"></div>
             <div class="linie-rechts"></div>
             <div class="linie-unten"></div>
-            <img src="/assets/wirtz.webp" class="wirtz">
-            <img src="/assets/mannschaftfoto.jpg" class="mannschaftfoto">
+            <img src="assets/wirtz.webp" class="wirtz">
+            <img src="assets/mannschaftfoto.jpg" class="mannschaftfoto">
             <div class="linie-strafraum"></div>
             <div class="half-circle"></div>
-            <img src="/assets/kroos.jpg" class="kroos">
-            <img src="/assets/trainer.jpg" class="trainer">
+            <img src="assets/kroos.jpg" class="kroos">
+            <img src="assets/trainer.jpg" class="trainer">
         </div>
         <div class="ergebnisse"> <!-- Hier die Ergebnisse einfügen-->
-
+            <div class="maincontainer">
+                <h1>Spiele & Ergebnisse unserer Mannschaft</h1>
+                <div class="boardcontainer">
+                    <div class="matchcontainer">
+                        <p1>Freitag, 14. Juni 2024</p1>
+                        <p2>Gruppenphase - Spieltag 1</p2>
+                        <div class="match">
+                            <div class="group">
+                                <p>Gruppe A</p>
+                            </div>
+                            <div class="infos">
+                                <div class="infos-left">
+                                    <div class="team1">
+                                        <div class="flag">
+                                            <img src="assets/flagge-deutschland.png">
+                                        </div>
+                                        <div class="team">
+                                            <p>Deutschland</p>
+                                        </div>
+                                        <div class="score">
+                                            <p>5</p>
+                                        </div>
+                                </div>
+                                    <div class="team2">
+                                        <div class="flag">
+                                            <img src="assets/flagge-schottland.png">
+                                        </div>
+                                        <div class="team">
+                                            <p>Schottland</p>
+                                        </div>
+                                        <div class="score">
+                                            <p>1</p>
+                                        </div>
+                                    </div> 
+                                </div>
+                                <div class="infos-strich"></div>
+                                <div class="infos-right">
+                                    <div class="time">
+                                        <p>21:00 Uhr</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <p1>Mittwoch, 19. Juni 2024</p1>
+                        <p2>Gruppenphase - Spieltag 2</p2>
+                        <div class="match">
+                            <div class="group">
+                                <p>Gruppe A</p>
+                            </div>
+                            <div class="infos">
+                                <div class="infos-left">
+                                    <div class="team1">
+                                        <div class="flag">
+                                            <img src="assets/flagge-deutschland.png">
+                                        </div>
+                                        <div class="team">
+                                            <p>Deutschland</p>
+                                        </div>
+                                        <div class="score">
+                                            <p>-</p>
+                                        </div>
+                                </div>
+                                    <div class="team2">
+                                        <div class="flag">
+                                            <img src="assets/flagge-ungarn.png">
+                                        </div>
+                                        <div class="team">
+                                            <p>Ungarn</p>
+                                        </div>
+                                        <div class="score">
+                                            <p>-</p>
+                                        </div>
+                                    </div> 
+                                </div>
+                                <div class="infos-strich"></div>
+                                <div class="infos-right">
+                                    <div class="time">
+                                        <p>18:00 Uhr</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <p1>Sonntag, 23. Juni 2024</p1>
+                        <p2>Gruppenphase - Spieltag 3</p2>
+                        <div class="match">
+                            <div class="group">
+                                <p>Gruppe A</p>
+                            </div>
+                            <div class="infos">
+                                <div class="infos-left">
+                                    <div class="team1">
+                                        <div class="flag">
+                                            <img src="assets/flagge-deutschland.png">
+                                        </div>
+                                        <div class="team">
+                                            <p>Deutschland</p>
+                                        </div>
+                                        <div class="score">
+                                            <p>-</p>
+                                        </div>
+                                </div>
+                                    <div class="team2">
+                                        <div class="flag">
+                                            <img src="assets/flagge-schweiz.png">
+                                        </div>
+                                        <div class="team">
+                                            <p>Schweiz</p>
+                                        </div>
+                                        <div class="score">
+                                            <p>-</p>
+                                        </div>
+                                    </div> 
+                                </div>
+                                <div class="infos-strich"></div>
+                                <div class="infos-right">
+                                    <div class="time">
+                                        <p>21:00 Uhr</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <img src="/assets/fans.jpg" class="fanfoto">
+        <img src="assets/fans.jpg" class="fanfoto">
         <div class="ende">
-            <img src="/assets/fanclub.jpg" 
+            <img src="assets/fanclub.jpg" 
             class="fanclub">
         </div>
 
 
     <!-- Newsletter Section -->
 <div class="background">
-    <img src="/assets/dfb-design-fanclub-poldi2.jpg" alt="Fanclub Hintergrund" class="background-image">
+    <img src="assets/dfb-design-fanclub-poldi2.jpg" alt="Fanclub Hintergrund" class="background-image">
     <div class="content">
         <div class="newsletter">
             <div class="newsletter-left">
