--- a/ws/football/src/main/resources/templates/kader.html
+++ b/ws/football/src/main/resources/templates/kader.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
+  <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <title>Kader</title>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="kader.css">
-</head>
-<body>
-   <header class="header">
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/kader.css">
+
+  </head>
+
+  <body>
+    <header class="header">
         <a href="index.html"><img src="assets/Logo.png" class="logo"></a>
         <input type="checkbox" id="check">
         <label for="check" class="menu">
@@ -18,11 +23,429 @@
         </label>    
         <nav class="navbar">
             <a href="index.html">Startseite</a>
-            <a href="stadien.html">Euro 2024</a>
-            <a href="ergebnisse.html" style="color: #C1A875">Ergebnisse</a>
+            <a href="stadien.html" style="color: #C1A875">DFB-Kader</a>
+            <a href="stadien.html">Stadien</a>
+            <a href="ergebnisse.html">Ergebnisse</a>
             <a href="forum.html">Forum</a>
             <a href="login.html">Login</a>
         </nav>
-    </header>
-</body>
+        </header>
+    <section id="tranding">
+      <div class="container">
+        <div class="swiper tranding-slider">
+          <div class="swiper-wrapper">
+            <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+              <div class="tranding-slide-img">
+                <img src="assets\foto-neuer.png">
+              </div>
+              <div class="tranding-slide-content">
+                <div class="tranding-slide-content-bottom">
+                    <h1 class="food-price">Manuel Neuer</h1>
+                  <h2 class="food-name">
+                    Torwart<br>120 Spiele
+                  </h2>
+                </div>
+              </div>
+            </div>
+            <!-- Slide-end -->
+            <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-terStegen.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Marc-André ter Stegen</h1>
+                    <h2 class="food-name">
+                      Torwart<br>40 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+        
+            <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-baumann.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Oliver Baumann</h1>
+                    <h2 class="food-name">
+                      Torwart<br>0 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+            <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-anton.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Waldemar Anton</h1>
+                    <h2 class="food-name">
+                      Abwehr<br>2 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+            <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-can.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Emre Can</h1>
+                    <h2 class="food-name">
+                      Abwehr<br>44 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+            <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-henrichs.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Benjamin Henrichs</h1>
+                    <h2 class="food-name">
+                        Abwehr<br>15 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+           <!-- Slide-start -->
+           <div class="swiper-slide tranding-slide">
+            <div class="tranding-slide-img">
+              <img src="assets\foto-kimmich.png">
+            </div>
+            <div class="tranding-slide-content">
+              <div class="tranding-slide-content-bottom">
+                  <h1 class="food-price">Joshua Kimmich</h1>
+                <h2 class="food-name">
+                    Abwehr<br>87 Spiele
+                </h2>
+              </div>
+            </div>
+          </div>
+          <!-- Slide-end -->
+             <!-- Slide-start -->
+            <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-koch.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Robin Koch</h1>
+                    <h2 class="food-name">
+                      Abwehr<br>9 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+               <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-mittelstädt.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Maximilian Mittelstädt</h1>
+                    <h2 class="food-name">
+                      Abwehr<br>5 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+               <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-raum.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">David Raum</h1>
+                    <h2 class="food-name">
+                      Abwehr<br>21 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+               <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-rüdiger.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Antonio Rüdiger</h1>
+                    <h2 class="food-name">
+                      Abwehr<br>70 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+               <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-schlotterbeck.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Nico Schlotterbeck</h1>
+                    <h2 class="food-name">
+                      Abwehr<br>12 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+               <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-tah.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Jonathan Tah</h1>
+                    <h2 class="food-name">
+                      Abwehr<br>26 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+               <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-andrich.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Robert Andrich</h1>
+                    <h2 class="food-name">
+                      Mittelfeld<br>6 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+               <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-führich.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Chris Führich</h1>
+                    <h2 class="food-name">
+                        Mittelfeld<br>4 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+               <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-gross.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Pascal Groß</h1>
+                    <h2 class="food-name">
+                        Mittelfeld<br>8 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+               <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-gündogan.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">İlkay Gündoğan</h1>
+                    <h2 class="food-name">
+                        Mittelfeld<br>78 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+               <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-kroos.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Toni Kroos</h1>
+                    <h2 class="food-name">
+                        Mittelfeld<br>110 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+               <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-musiala.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Jamal Musiala</h1>
+                    <h2 class="food-name">
+                        Mittelfeld<br>30 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+               <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-sane.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Leroy Sané</h1>
+                    <h2 class="food-name">
+                        Mittelfeld<br>61 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+               <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-wirtz.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Florian Wirtz</h1>
+                    <h2 class="food-name">
+                        Mittelfeld<br>19 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+               <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-beier.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Maximilian Beier</h1>
+                    <h2 class="food-name">
+                        Angriff<br>1 Spiel
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+               <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-füllkrug.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Niclas Füllkrug</h1>
+                    <h2 class="food-name">
+                        Angriff<br>17 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+               <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-havertz.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Kai Havertz</h1>
+                    <h2 class="food-name">
+                        Angriff<br>47 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+               <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-müller.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Thomas Müller</h1>
+                    <h2 class="food-name">
+                        Angriff<br>130 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+               <!-- Slide-start -->
+            <div class="swiper-slide tranding-slide">
+                <div class="tranding-slide-img">
+                  <img src="assets\foto-undav.png">
+                </div>
+                <div class="tranding-slide-content">
+                  <div class="tranding-slide-content-bottom">
+                      <h1 class="food-price">Deniz Undav</h1>
+                    <h2 class="food-name">
+                        Angriff<br>2 Spiele
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <!-- Slide-end -->
+          </div>
+
+          <div class="tranding-slider-control">
+            <div class="swiper-button-prev slider-arrow">
+              <ion-icon name="arrow-back-outline"></ion-icon>
+            </div>
+            <div class="swiper-button-next slider-arrow">
+              <ion-icon name="arrow-forward-outline"></ion-icon>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script src="js/kader.js"></script>
+  </body>
+
 </html>
