--- a/ws/football/src/main/resources/templates/login.html
+++ b/ws/football/src/main/resources/templates/login.html
@@ -3,26 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="css/login.css">
 </head>
 
 <body>
     <header class="header">
-        <a href="#"><img src="/assets/Logo.png" class="logo"></a>
+        <a href="index.html"><img src="assets/Logo.png" class="logo"></a>
         <input type="checkbox" id="check">
         <label for="check" class="menu">
             <i class="bx bx-menu" id="icon-menu"></i>
             <i class="bx bx-x" id="close-menu"></i>
         </label>    
         <nav class="navbar">
-            <a href="#">Startseite</a>
-            <a href="#">Euro 2024</a>
-            <a href="#">Ergebnisse</a>
-            <a href="#">Forum</a>
-            <a href="#">Login</a>
+            <a href="index.html">Startseite</a>
+            <a href="kader.html">DFB-Kader</a>
+            <a href="stadien.html">Stadien</a>
+            <a href="ergebnisse.html">Ergebnisse</a>
+            <a href="forum.html">Forum</a>
+            <a href="login.html" style="color: #C1A875">Login</a>
         </nav>
         </header>
     <div class="wrapper">
@@ -70,7 +71,7 @@
             </div>
         </form>
     </div>
-    <script src="/js/login.js"></script>
+    <script src="js/login.js"></script>
 
 </body>
 </html>
