--- a/ws/football/src/main/resources/templates/stadien.html
+++ b/ws/football/src/main/resources/templates/stadien.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Stadien</title>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/stadien.css">
+    <link rel="stylesheet" href="css/stadien.css">
 </head>
 <body>
     <header class="header" id="header">
-        <a href="index.html"><img src="/assets/Logo.png" class="logo"></a>
+        <a href="index.html"><img src="assets/Logo.png" class="logo"></a>
         <input type="checkbox" id="check">
         <label for="check" class="menu">
             <i class="bx bx-menu" id="icon-menu"></i>
@@ -20,8 +20,9 @@
         </label>    
         <nav class="navbar" id="navbar">
             <a href="index.html">Startseite</a>
-            <a href="stadien.html">Euro 2024</a>
-            <a href="#">Ergebnisse</a>
+            <a href="kader.html">DFB-Kader</a>
+            <a href="stadien.html" style="color: #C1A875">Stadien</a>
+            <a href="ergebnisse.html">Ergebnisse</a>
             <a href="forum.html">Forum</a>
             <a href="login.html">Login</a>
         </nav>
@@ -35,7 +36,7 @@
                 <a href="#berlin" class="button">Erfahre mehr</a>
         </div>
         </div>
-        <img src="/assets/olympiastadion2.jpeg" class="image">
+        <img src="assets/olympiastadion2.jpeg" class="image">
     </div>
     <div class="myslider fade">
         <div class="text">
@@ -159,7 +160,7 @@
             </div>
 
             <div class="container2" id="text-bild">
-                <img src="/assets/berlin-stadion-außen.webp">
+                <img src="assets/berlin-stadion-außen.webp">
             </div>
 
             <div class="container2" id="text-maps">
@@ -211,7 +212,7 @@
             </div>
 
             <div class="container2" id="text-bild">
-                <img src="/assets/bayern-stadion-außen.jpeg">
+                <img src="assets/bayern-stadion-außen.jpeg">
             </div>
 
             <div class="container2" id="text-maps">
@@ -263,7 +264,7 @@
             </div>
 
             <div class="container2" id="text-bild">
-                <img src="/assets/dortmund-stadion-außen.jpg">
+                <img src="assets/dortmund-stadion-außen.jpg">
             </div>
 
             <div class="container2" id="text-maps">
@@ -314,7 +315,7 @@
             </div>
 
             <div class="container2" id="text-bild">
-                <img src="/assets/hamburg-stadion-außen.jpg">
+                <img src="assets/hamburg-stadion-außen.jpg">
             </div>
 
             <div class="container2" id="text-maps">
@@ -365,7 +366,7 @@
                 </div>
     
                 <div class="container2" id="text-bild">
-                    <img src="/assets/frankfurt-stadion-außen.jpg">
+                    <img src="assets/frankfurt-stadion-außen.jpg">
                 </div>
     
                 <div class="container2" id="text-maps">
@@ -415,7 +416,7 @@
                 </div>
     
                 <div class="container2" id="text-bild">
-                    <img src="/assets/gelsenkirchen-stadion-außen.jpg">
+                    <img src="assets/gelsenkirchen-stadion-außen.jpg">
                 </div>
     
                 <div class="container2" id="text-maps">
@@ -465,7 +466,7 @@
             </div>
 
             <div class="container2" id="text-bild">
-                <img src="/assets/leipzig-stadion-außen.jpg">
+                <img src="assets/leipzig-stadion-außen.jpg">
             </div>
 
             <div class="container2" id="text-maps">
@@ -516,7 +517,7 @@
             </div>
 
             <div class="container2" id="text-bild">
-                <img src="/assets/düsseldorf-stadion-außen.jpg">
+                <img src="assets/düsseldorf-stadion-außen.jpg">
             </div>
 
             <div class="container2" id="text-maps">
@@ -567,7 +568,7 @@
             </div>
 
             <div class="container2" id="text-bild">
-                <img src="/assets/köln-stadion-außen.jpg">
+                <img src="assets/köln-stadion-außen.jpg">
             </div>
 
             <div class="container2" id="text-maps">
@@ -599,7 +600,7 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgh-8kfZs-BwEUXp1gyQaQ_eFxr7TtsDQ&callback=initMap&libraries=marker&v=beta"
     defer>
 </script>
-<script src="/js/stadien.js"></script>
+<script src="js/stadien.js"></script>
 
 </body>
 </html>
