--- a/ws/football/src/main/resources/static/css/forum.css
+++ b/ws/football/src/main/resources/static/css/forum.css
@@ -61,23 +61,9 @@ font-size: 20px;
 
 }
 
-.navbar a::before {
-padding-right: 0px;
-content: "";
-position: absolute;
-display: block;
-width: 100%;
-height: 2px;
-bottom: 0;
-left: 0;
-background-color: #C1A875;
-transform: scaleX(0);
-transition: transform 0.3s ease;
-}
-
-.navbar a:hover::before {
-transform: scaleX(1);
-}
+.navbar a:hover {
+    color: #C1A875;
+    }
 
 #check {
 display: none;
@@ -92,13 +78,13 @@ cursor: pointer;
 display: none;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 1160px) {
 .header {
 padding: 1.3rem 5%;
 }
 }
 
-@media (max-width: 854px) {
+@media (max-width: 1030px) {
 .menu {
 display: inline-flex;
 }
@@ -126,7 +112,7 @@ overflow: hidden;
 transition: .2s ease;
 }
 #check:checked ~ .navbar {
-height: 20rem;
+height: 23rem;
 }
 .navbar a {
 display: block;
@@ -156,7 +142,7 @@ transition: all 0.3s;
 
 .sidebar li {
 height: 50px;
-margin-top: 20px;
+margin-top: 50px;
 list-style: none;
 display: flex;
 align-items: center;
@@ -173,16 +159,16 @@ height: 30px;
 }
 
 .sidebar li .text {
-color: white;
-margin-left: 35px;
-font-size: 25px;
+    color: white;
+    margin-left: 35px;
+    font-size: 25px;
 }
 
 .sidebar li a {
-height: 100%;
-display: flex;
-align-items: center;
-text-decoration: none;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
 }
 
 .sidebar li .text.active {
@@ -227,7 +213,7 @@ display: none;
 }
 
 .sidebar input[type="checkbox"]:checked ~ .menu-block {
-display: block;
+    display: block;
 }
 
 @media (max-width: 1100px) {
