--- a/ws/football/src/main/resources/static/css/index.css
+++ b/ws/football/src/main/resources/static/css/index.css
@@ -7,11 +7,12 @@
 
 main {
     min-height: 100vh;
-    background-image: linear-gradient(to left, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/assets/start.jpg");
+    background-image: linear-gradient(to left, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("C:\xampp\htdocs\Website\assets\start.jpg");
     background-size: cover;
     background-position: center;
 }
 
+/* Navigantionsbar */
 .header {
     position: fixed;
     top: 0;
@@ -25,9 +26,9 @@ main {
     height: 110px;
     border: 2px solid;
     border-color: #C1A875;
-}
-
-.header::before {
+  }
+  
+  .header::before {
     content: "";
     position: absolute;
     top: 0;
@@ -37,100 +38,100 @@ main {
     background: rgb(255, 255, 255, .15);
     backdrop-filter: blur(50px);
     z-index: -1;
-}
-
-.header a {
+  }
+  
+  .header a {
     width: 125px; 
     height: 83px;
-}
-
-.logo {
+  }
+  
+  .logo {
     width: 100%;
-}
-
-
-.navbar {
-display: block;
-margin-right: 20px;
-}
-
-.navbar a {
+  }
+  
+  
+  .navbar {
+  display: block;
+  margin-right: 20px;
+  }
+  
+  .navbar a {
     position: relative;
-font-size: 1.15rem;
-color: white;
-text-decoration: none;
-font-weight: 500;
-margin-left: 2.5rem;
-transition: .3s ease;
-font-size: 20px;
-
-}
-
-.navbar a:hover {
+  font-size: 1.15rem;
+  color: white;
+  text-decoration: none;
+  font-weight: 500;
+  margin-left: 2.5rem;
+  transition: .3s ease;
+  font-size: 20px;
+  
+  }
+  
+  .navbar a:hover {
   color: #C1A875;
-}
-
-#check {
-display: none;
-}
-
-.menu {
-position: absolute;
-right: 5%;
-color: black;
-font-size: 2rem;
-cursor: pointer;
-display: none;
-}
-
-@media (max-width: 1000px) {
-.header {
+  }
+  
+  #check {
+  display: none;
+  }
+  
+  .menu {
+  position: absolute;
+  right: 5%;
+  color: white;
+  font-size: 2rem;
+  cursor: pointer;
+  display: none;
+  }
+  
+  @media (max-width: 1160px) {
+  .header {
     padding: 1.3rem 5%;
     background-color: transparent;
-}
-}
-
-@media (max-width: 892px) {
-.menu {
+  }
+  }
+  
+  @media (max-width: 1030px) {
+  .menu {
     display: inline-flex;
-}
-#check:checked ~ .menu #icon-menu {
-display: none;
-}
-.menu #close-menu {
-display: none;
-}
-#check:checked ~ .menu #close-menu {
-display: block;
-}
-.navbar {
-position: absolute;
-top: 100%;
-left: 0%;
-width: 100%;
-height: 0;
-background: rgb(255, 255, 255, .15);
-backdrop-filter: blur(50px);
-overflow: hidden;
-transition: .2s ease;
-
-}
-#check:checked ~ .navbar {
-height: 20rem;
-}
-.navbar a {
-display: block;
-height: 35px;
-margin: 1.5rem auto;
-text-align: center;
-
-font-size: 20px;
-
-}
-#check:checked ~ .navbar a{
+  }
+  #check:checked ~ .menu #icon-menu {
+  display: none;
+  }
+  .menu #close-menu {
+  display: none;
+  }
+  #check:checked ~ .menu #close-menu {
+  display: block;
+  }
+  .navbar {
+  position: absolute;
+  top: 100%;
+  left: 0%;
+  width: 100%;
+  height: 0;
+  background: rgb(255, 255, 255, .15);
+  backdrop-filter: blur(50px);
+  overflow: hidden;
+  transition: .2s ease;
+  
+  }
+  #check:checked ~ .navbar {
+  height: 23rem;
+  }
+  .navbar a {
+  display: block;
+  height: 35px;
+  margin: 1.5rem auto;
+  text-align: center;
+  
+  font-size: 20px;
+  
+  }
+  #check:checked ~ .navbar a{
     transform: translateY(0);
-}
-}
+  }
+  }
 
 .mannschaft {
     background-color: black;
@@ -265,18 +266,173 @@ font-size: 20px;
     background-color: black;
     transform: rotate(180deg);
 }
-
-.ergebnisse {
+/* Bereich für die Spiele von Deutschland */
+/*.ergebnisse {
     position: relative;
     background-color: white;
     height: 100vh;
+}*/
+
+.ergebnisse {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   
 }
+.ergebnisse h1{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.maincontainer {
+    width: 75%;
+}
+.maincontainer h1 {
+    font-size: 50px;
+    font-weight: 600;
+    margin-top: 50px;
+}
+.boardcontainer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+    align-items: center;
+    justify-content: center;
+}
+.boardcontainer p1 {
+    margin-top: 20px;
+    font-size: 19px;
+    font-weight: 600;
+}
+.boardcontainer p2 {
+    margin-top: 20px;
+    font-size: 19px;
+    font-weight: 400;
+}
+.matchcontainer {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: repeat(3, 1fr); /* maximal 3 Spalten in einer Zeile */
+    grid-gap: 20px;
+    margin-top: 20px;
+}
+/* Responsive */
+@media (max-width: 1540px) {
+    .matchcontainer {
+        grid-template-columns: repeat(1, 1fr); /* maximal 2 Spalten in einer Zeile */
+    }
+}
+@media (max-width: 1100px) {
+    .matchcontainer {
+        grid-template-columns: repeat(1, 1fr); /* maximal 1 Spalten in einer Zeile */
+    }
+}
+
+.match {
+    background-color: white;
+    width: 110%;
+    height: 200px;
+    border-radius: 8px;
+    border: 1px solid;
+    border-color: lightgrey;
+    margin-left: -10%;
+}
+.group {
+    width: 100%;
+    padding: 30px;
+    height: 50px;
+}
+.infos {
+    display: flex;
+    width: 100%;
+    height: 140px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.infos-left {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    gap: 10px;
+}
+.infos-strich {
+    height: 80%;
+    margin-top: 14px;
+    width: 1px;
+    background-color: lightgray;
+}
+.infos-right {
+    width: 30%;
+}
+.team1 {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    
+}
+.team2 {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    
+
+}
+.flag {
+    width: 40px;
+    height: 40px;
+}
+.flag img {
+    width: 100%;
+    height: 100%;
+    border-radius: 200px;
+}
+.team {
+    width: 150px;
+}
+.team p {
+    font-size: 19px;
+    font-weight: 500;
+    padding-left: 10px;
+}
+
+.score p {
+    font-size: 21px;
+    font-weight: 500;
+    
+}
+.score {
+    width: 46px;
+    text-align: center;
+    justify-content: center;
+}
+.time {
+    height: 100%;
+display: flex;
+align-items: center; 
+justify-content: center; 
+text-align: center; 
+}
+.time p {
+    margin: 0;
+}
+
+
+
+
+
+
+
 
 .fanfoto {
     width: 100%;
     background-size: cover;
     background-position: center;
-
 }
 
 
