--- a/ws/football/src/main/resources/static/css/kader.css
+++ b/ws/football/src/main/resources/static/css/kader.css
@@ -1,49 +1,50 @@
-* {
-    font-family: "Rubik", sans-serif;
-padding: 0;
-margin:0;
-box-sizing: border-box;
-} 
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style-type: none;
+  text-decoration: none;
+  font-family: "Rubik", sans-serif;
 
-body {
-    background-color: #f5f5f5;
-    }
+}
 
 /* Navigantionsbar */
 .header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 1.3rem 10%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
-    height: 110px;
-    border: 2px solid;
-    border-color: #C1A875;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 1.3rem 10%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 100;
+  height: 110px;
+  border: 2px solid;
+  border-color: #C1A875;
 }
 
 .header::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgb(255, 255, 255, .15);
-    backdrop-filter: blur(50px);
-    z-index: -1;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgb(255, 255, 255, .15);
+  backdrop-filter: blur(50px);
+  z-index: -1;
 }
 
 .header a {
-    width: 125px; 
-    height: 83px;
+  width: 125px; 
+  height: 83px;
 }
 
 .logo {
-    width: 100%;
+  width: 100%;
 }
 
 
@@ -53,19 +54,19 @@ margin-right: 20px;
 }
 
 .navbar a {
-    position: relative;
+  position: relative;
 font-size: 1.15rem;
 color: black;
 text-decoration: none;
 font-weight: 500;
 margin-left: 2.5rem;
-transition: .50s ease;
+transition: .3s ease;
 font-size: 20px;
 
 }
 
 .navbar a:hover {
-  color: #C1A875;
+color: #C1A875;
 }
 
 #check {
@@ -81,16 +82,16 @@ cursor: pointer;
 display: none;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1160px) {
 .header {
-    padding: 1.3rem 5%;
-    background-color: transparent;
+  padding: 1.3rem 5%;
+  background-color: transparent;
 }
 }
 
-@media (max-width: 892px) {
+@media (max-width: 1023px) {
 .menu {
-    display: inline-flex;
+  display: inline-flex;
 }
 #check:checked ~ .menu #icon-menu {
 display: none;
@@ -114,18 +115,227 @@ transition: .2s ease;
 
 }
 #check:checked ~ .navbar {
-height: 20rem;
+height: 23rem;
 }
 .navbar a {
 display: block;
 height: 35px;
 margin: 1.5rem auto;
 text-align: center;
-transition: -2s ease;
+
 font-size: 20px;
 
 }
 #check:checked ~ .navbar a{
-    transform: translateY(0);
+  transform: translateY(0);
 }
+}
+
+::-webkit-scrollbar {
+  width: 1.3rem;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 1rem;
+  background: #797979;
+  transition: all 0.5s ease-in-out;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #222224;
+}
+
+::-webkit-scrollbar-track {
+  background: #f9f9f9;
+}
+
+body {
+  font-size: 1.6rem;
+  background-color: #f5f5f5;
+  position: fixed;
+}
+
+.container {
+  max-width: 124rem;
+  padding: 0 1rem;
+  margin: 0 auto;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.section-heading {
+  font-size: 3rem;
+  color: var(--primary);
+  padding: 2rem 0;
+}
+
+#tranding {
+  padding: 4rem 0;
+  margin-top: 45px;
+}
+
+@media (max-width:1440px) {
+  #tranding {
+    padding: 7rem 0;
+  }
+}
+
+#tranding .tranding-slider {
+  height: 52rem;
+  padding: 2rem 0;
+  position: relative;
+}
+
+@media (max-width:500px) {
+  #tranding .tranding-slider {
+    height: 45rem;
+  }
+}
+
+.tranding-slide {
+  width: 37rem;
+  height: 42rem;
+  position: relative;
+}
+
+@media (max-width:500px) {
+  .tranding-slide {
+    width: 28rem !important;
+    height: 36rem !important;
+  }
+  .tranding-slide .tranding-slide-img img {
+    width: 28rem !important;
+    height: 36rem !important;
+  }
+}
+
+.tranding-slide .tranding-slide-img img {
+  width: 37rem;
+  height: 42rem;
+  border-radius: 2rem;
+  border: 1.5px solid;
+ 
+  object-fit: cover;
+}
+
+.tranding-slide .tranding-slide-content {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.tranding-slide-content .food-price {
+    text-align: center;
+  background: #C1A875;
+  height: 110%;
+  width: 110%;
+  color: white;
+}
+
+.tranding-slide-content .tranding-slide-content-bottom {
+  position: absolute;
+  bottom: 2rem;
+  left: 2rem;
+  text-align: center;
+  color: #C1A875;
+}
+
+
+
+.rating ion-icon {
+  color: var(--primary);
+}
+
+.swiper-slide-shadow-left,
+.swiper-slide-shadow-right {
+  display: none;
+}
+
+.tranding-slider-control {
+  position: relative;
+  bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.tranding-slider-control .swiper-button-next {
+  left: 63% !important;
+  transform: translateX(-25%) !important;
+  z-index: 1000;
+  margin-top: -37px;
+}
+.tranding-slider-control .swiper-button-prev {
+    left: 36% !important;
+    z-index: 1000;
+    margin-top: -37px;
+}
+
+@media (max-width:990px) {
+  .tranding-slider-control .swiper-button-next {
+    left: 70% !important;
+    transform: translateX(-70%) !important;
+  }
+}
+
+@media (max-width:450px) {
+  .tranding-slider-control .swiper-button-next {
+    left: 80% !important;
+    transform: translateX(-80%) !important;
+  }
+}
+
+@media (max-width:990px) {
+  .tranding-slider-control .swiper-button-prev {
+    left: 30% !important;
+    transform: translateX(-30%) !important;
+  }
+}
+
+@media (max-width:450px) {
+  .tranding-slider-control .swiper-button-prev {
+    left: 20% !important;
+    transform: translateX(-20%) !important;
+  }
+}
+
+.tranding-slider-control .slider-arrow {
+    background: white;
+    width: 3.5rem;
+    height: 3.5rem;
+    border-radius: 50%;
+    left: 42%;
+    transform: translateX(-42%);
+    filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+}
+
+.tranding-slider-control .slider-arrow ion-icon {
+  font-size: 2rem;
+  color: #222224;
+}
+
+.tranding-slider-control .slider-arrow::after {
+  content: '';
+  
+}
+
+.tranding-slider-control .swiper-pagination {
+  position: relative;
+
+  bottom: 1rem;
+  
+}
+
+.tranding-slider-control .swiper-pagination .swiper-pagination-bullet {
+  filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+  
+}
+
+.tranding-slider-control .swiper-pagination .swiper-pagination-bullet-active {
+  background: #C1A875;
+  
 }
