--- a/ws/football/src/main/resources/static/css/login.css
+++ b/ws/football/src/main/resources/static/css/login.css
@@ -10,142 +10,132 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('/assets/dfb-design-fanclub-poldi2.jpg') no-repeat;
+    background: url('assets/dfb-design-fanclub-poldi2.jpg') no-repeat;
     background-size: cover;
-    background-position: center;;
+    background-position: center;
+
 }
 
+/* Navigantionsbar */
 .header {
-position: fixed;
-top: 0;
-left: 0;
-width: 100%;
-padding: 1.3rem 10%;
-display: flex;
-justify-content: space-between;
-align-items: center;
-z-index: 100;
-height: 110px;
-}
-
-.header::before {
-content: "";
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-background: rgb(255, 255, 255, .15);
-backdrop-filter: blur(50px);
-z-index: -1;
-}
-
-.header a {
-width: 125px; 
-height: 83px;
-}
-
-.logo {
-width: 100%;
-}
-
-
-.navbar {
-display: block;
-margin-right: 20px;
-}
-
-.navbar a {
-position: relative;
-font-size: 1.15rem;
-color: white;
-text-decoration: none;
-font-weight: 500;
-margin-left: 2.5rem;
-transition: .50s ease;
-font-size: 20px;
-
-}
-
-.navbar a::before {
-padding-right: 0px;
-content: "";
-position: absolute;
-display: block;
-width: 100%;
-height: 2px;
-bottom: 0;
-left: 0;
-background-color: #C1A875;
-transform: scaleX(0);
-transition: transform 0.3s ease;
-}
-
-.navbar a:hover::before {
-transform: scaleX(1);
-}
-
-#check {
-display: none;
-}
-
-.menu {
-position: absolute;
-right: 5%;
-color: white;
-font-size: 2rem;
-cursor: pointer;
-display: none;
-}
-
-@media (max-width: 992px) {
-.header {
-padding: 1.3rem 5%;
-background-color: transparent;
-}
-}
-
-@media (max-width: 854px) {
-.menu {
-display: inline-flex;
-}
-#check:checked ~ .menu #icon-menu {
-display: none;
-}
-.menu #close-menu {
-display: none;
-}
-#check:checked ~ .menu #close-menu {
-display: block;
-}
-.navbar {
-position: absolute;
-top: 100%;
-left: 0%;
-width: 100%;
-height: 0;
-background: rgb(255, 255, 255, .15);
-backdrop-filter: blur(50px);
-overflow: hidden;
-transition: .2s ease;
-
-}
-#check:checked ~ .navbar {
-height: 20rem;
-}
-.navbar a {
-display: block;
-height: 35px;
-margin: 1.5rem auto;
-text-align: center;
-transition: -2s ease;
-font-size: 20px;
-
-}
-#check:checked ~ .navbar a{
-transform: translateY(0);
-}
-}
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 1.3rem 10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+    height: 110px;
+    border: 2px solid;
+    border-color: #C1A875;
+  }
+  
+  .header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(255, 255, 255, .15);
+    backdrop-filter: blur(50px);
+    z-index: -1;
+  }
+  
+  .header a {
+    width: 125px; 
+    height: 83px;
+  }
+  
+  .logo {
+    width: 100%;
+  }
+  
+  
+  .navbar {
+  display: block;
+  margin-right: 20px;
+  }
+  
+  .navbar a {
+    position: relative;
+  font-size: 1.15rem;
+  color: white;
+  text-decoration: none;
+  font-weight: 500;
+  margin-left: 2.5rem;
+  transition: .3s ease;
+  font-size: 20px;
+  
+  }
+  
+  .navbar a:hover {
+  color: #C1A875;
+  }
+  
+  #check {
+  display: none;
+  }
+  
+  .menu {
+  position: absolute;
+  right: 5%;
+  color: white;
+  font-size: 2rem;
+  cursor: pointer;
+  display: none;
+  }
+  
+  @media (max-width: 1160px) {
+  .header {
+    padding: 1.3rem 5%;
+    background-color: transparent;
+  }
+  }
+  
+  @media (max-width: 1030px) {
+  .menu {
+    display: inline-flex;
+  }
+  #check:checked ~ .menu #icon-menu {
+  display: none;
+  }
+  .menu #close-menu {
+  display: none;
+  }
+  #check:checked ~ .menu #close-menu {
+  display: block;
+  }
+  .navbar {
+  position: absolute;
+  top: 100%;
+  left: 0%;
+  width: 100%;
+  height: 0;
+  background: rgb(255, 255, 255, .15);
+  backdrop-filter: blur(50px);
+  overflow: hidden;
+  transition: .2s ease;
+  
+  }
+  #check:checked ~ .navbar {
+  height: 23rem;
+  }
+  .navbar a {
+  display: block;
+  height: 35px;
+  margin: 1.5rem auto;
+  text-align: center;
+  
+  font-size: 20px;
+  
+  }
+  #check:checked ~ .navbar a{
+    transform: translateY(0);
+  }
+  }
 
 .wrapper {
 display: flex;
