--- a/ws/football/src/main/resources/static/css/stadien.css
+++ b/ws/football/src/main/resources/static/css/stadien.css
@@ -15,9 +15,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 1000;
+    z-index: 100;
     height: 110px;
-}
+    border: 2px solid;
+    border-color: #C1A875;
+  }
 
 .header.changed {
     border: 2px solid #C1A875;
@@ -34,118 +36,103 @@
     background: rgb(255, 255, 255, .15);
     backdrop-filter: blur(50px);
     z-index: -1;
-}
-
-.header a {
+  }
+  
+  .header a {
     width: 125px; 
     height: 83px;
-}
-
-.logo {
+  }
+  
+  .logo {
     width: 100%;
-}
-
-
-.navbar {
-display: block;
-margin-right: 20px;
-}
-
-.navbar a {
-position: relative;
-color: white;
-text-decoration: none;
-font-weight: 500;
-margin-left: 2.5rem;
-transition: .50s ease;
-font-size: 20px;
-}
+  }
+  
+  
+  .navbar {
+  display: block;
+  margin-right: 20px;
+  }
+  
+  .navbar a {
+    position: relative;
+  font-size: 1.15rem;
+  color: white;
+  text-decoration: none;
+  font-weight: 500;
+  margin-left: 2.5rem;
+  transition: .3s ease;
+  font-size: 20px;
+  
+  }
 .navbar.changed a {
     color: black;
     }
 
-.navbar a::before {
-    padding-right: 0px;
-  content: "";
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: #C1A875;
-  transform: scaleX(0);
-  transition: transform 0.3s ease;
-
-}
-
-.navbar a:hover::before {
-  transform: scaleX(1);
-}
-
-#check {
-display: none;
-}
-
-.menu {
-position: absolute;
-right: 5%;
-color: white;
-font-size: 2rem;
-cursor: pointer;
-display: none;
-}
-
-@media (max-width: 992px) {
-.header {
-    padding: 1.3rem 5%;
-}
-}
-
-@media (max-width: 890px) {
-.menu {
-    display: inline-flex;
-}
-#check:checked ~ .menu #icon-menu {
-display: none;
-}
-.menu #close-menu {
-display: none;
-}
-#check:checked ~ .menu #close-menu {
-display: block;
-}
-.navbar {
-position: absolute;
-top: 100%;
-left: 0%;
-width: 100%;
-height: 0;
-background: rgb(255, 255, 255, .15);
-backdrop-filter: blur(50px);
-overflow: hidden;
-transition: .2s ease;
-
-}
-#check:checked ~ .navbar {
-height: 20rem;
-}
-.navbar a {
-display: block;
-height: 35px;
-margin: 1.5rem auto;
-text-align: center;
-transition: -2s ease;
-font-size: 20px;
-color: white;
-}
-.navbar.checked a {
-    color: black;
-    }
-#check:checked ~ .navbar a{
-    transform: translateY(0);
-}
-}
+    .navbar a:hover {
+        color: #C1A875;
+        }
+        
+        #check {
+        display: none;
+        }
+        
+        .menu {
+        position: absolute;
+        right: 5%;
+        color: white;
+        font-size: 2rem;
+        cursor: pointer;
+        display: none;
+        }
+        
+        @media (max-width: 1160px) {
+        .header {
+          padding: 1.3rem 5%;
+          background-color: transparent;
+        }
+        }
+        
+        @media (max-width: 1030px) {
+        .menu {
+          display: inline-flex;
+        }
+        #check:checked ~ .menu #icon-menu {
+        display: none;
+        }
+        .menu #close-menu {
+        display: none;
+        }
+        #check:checked ~ .menu #close-menu {
+        display: block;
+        }
+        .navbar {
+        position: absolute;
+        top: 100%;
+        left: 0%;
+        width: 100%;
+        height: 0;
+        background: rgb(255, 255, 255, .15);
+        backdrop-filter: blur(50px);
+        overflow: hidden;
+        transition: .2s ease;
+        
+        }
+        #check:checked ~ .navbar {
+        height: 23rem;
+        }
+        .navbar a {
+        display: block;
+        height: 35px;
+        margin: 1.5rem auto;
+        text-align: center;
+        
+        font-size: 20px;
+        
+        }
+        #check:checked ~ .navbar a{
+          transform: translateY(0);
+        }
+        }
 
 .slider {
     position: relative;
